# PyMesh

./: .gitignore  README.md  app.py  json_to_csv.py  pyproject.toml  style_config.py
.github/workflows/: ci.yaml
data/: authors.csv  co_authorships.csv  paper_fields.csv  paper_venues.csv  paper_years.csv  papers.csv  venues.csv  years.csv
dependency_mapper_outputs/: dependency-mapping-tool_dependency_map.html
notebooks/: Project Dependency Mapper.ipynb
pymesh/: dependency_mapper.py
tests/: test_discover.py  test_graph.py  test_parsing.py
utils/: load_json_dep_map.cypher
