[tool.poetry]
name = "dependency-mapping-tool"
version = "0.1.0"
description = "a tool to analyze Python project dependencies"
authors = ["Barbara <dagny099@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
networkx = "^3.1"
pyvis = "^0.2.1"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
