[tool.poetry]
name = "pymesh"
version = "0.1.0"
description = "A Python dependency visualization and analysis tool developed to be intuitive and user-friendly"
authors = ["Barbara <dagny099@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
networkx = "^3.1"
pyvis = "^0.2.1"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

